--- a/hukuki/src/index.html
+++ b/hukuki/src/index.html
@@ -16,7 +16,7 @@
 	<!-- Title of Site -->
 	<title>Avukat Durmus Ali Genc </title>
   <base href="/">
-  
+  <script src="https://kit.fontawesome.com/d4d199c9e1.js" crossorigin="anonymous"></script>
 	<link rel="icon" type="image/png" href="./assets/img/favicon.png">
  
 	<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
@@ -43,7 +43,7 @@
  
   
 	<link rel="stylesheet" href="./assets/css/responsive.css">
-
+	
 	</head>
 	<body>
   <app-root></app-root>
