--- a/hukuki/src/index.html
+++ b/hukuki/src/index.html
@@ -14,7 +14,7 @@
 	<meta name="author" content="ThemeOri">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Title of Site -->
-	<title>Avukat Durmus Ali Genc </title>
+	<title>Avukat DAG </title>
   <base href="/">
   <script src="https://kit.fontawesome.com/d4d199c9e1.js" crossorigin="anonymous"></script>
 	<link rel="icon" type="image/png" href="./assets/img/favicon.png">
