title set added

--- a/hukuki/src/index.html
+++ b/hukuki/src/index.html
@@ -1,48 +1,39 @@
 <!doctype html>
 <html lang="en">
 	<head>
-  <!-- <meta charset="utf-8">
-  <title>Hukuki</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+		<meta charset="UTF-8">
+		<title>Safa Hukuk</title>
+		<meta name="description" content="Safa Hukuk" />
+  		<base href="/">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="keywords" content="Creative, Digital, multipage, landing, Technology, Programming ,Law" />
+		
+		<!-- Title of Site -->
+	
+		<script src="https://kit.fontawesome.com/d4d199c9e1.js" crossorigin="anonymous"></script>
+		<link rel="icon" type="image/png" href="./assets/img/favicon.png">
+	
+		<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 
-  <meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="description" content="Buildine - Construction & Building HTML 5 Template" />
-	<meta name="keywords" content="Creative, Digital, multipage, landing, freelancer template" />
-	<meta name="author" content="ThemeOri">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Title of Site -->
-	<title>Safa Hukuk </title>
-  <base href="/">
-  <script src="https://kit.fontawesome.com/d4d199c9e1.js" crossorigin="anonymous"></script>
-	<link rel="icon" type="image/png" href="./assets/img/favicon.png">
- 
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-
-
-	 
-
- 
-	<link rel="stylesheet" href="./assets/css/fontawesome.min.css">
-  
-	<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
- 
-	<link rel="stylesheet" href="./assets/css/animate.css">
- 
-	<link rel="stylesheet" href="./assets/css/slicknav.min.css">
- 
-	<link rel="stylesheet" href="./assets/css/meanmenu.min.css">
- 
-	<link rel="stylesheet" href="./assets/fonts/flaticon.css">
- 
-	<link rel="stylesheet" href="./assets/css/space.css">
- 
-	<link rel="stylesheet" href="./assets/css/default.css">
- 
-  
-	<link rel="stylesheet" href="./assets/css/responsive.css">
+		<link rel="stylesheet" href="./assets/css/fontawesome.min.css">
+	
+		<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
+	
+		<link rel="stylesheet" href="./assets/css/animate.css">
+	
+		<link rel="stylesheet" href="./assets/css/slicknav.min.css">
+	
+		<link rel="stylesheet" href="./assets/css/meanmenu.min.css">
+	
+		<link rel="stylesheet" href="./assets/fonts/flaticon.css">
+	
+		<link rel="stylesheet" href="./assets/css/space.css">
+	
+		<link rel="stylesheet" href="./assets/css/default.css">
+	
+	
+		<link rel="stylesheet" href="./assets/css/responsive.css">
 	
 	</head>
 	<body>
